--- a/Cenesfu/Home.html
+++ b/Cenesfu/Home.html
@@ -5,35 +5,79 @@
 	<meta name="keywords" content="Cenesfu,Instituto,Institucion,Colegio,Bachillerato,primaria,Jornada,Educacion virtual,Educacion">
 	<meta name="description" content="Cenesfu es una institucion educativa virtual que pretende conseguir que las personas que no puedan asistir a un aula puedan acceder a la educacion">
 	<meta name="author" content="Equipo 1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="copyright" content="Cenesfu.SAS">
     <title>Cenesfu.SAS</title>
-    <link rel="stylesheet" type="" href="estilos.css">
+   <link rel="stylesheet"  href="./Css/main.css">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Praise&display=swap" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
     
 	
         
 </head>
 <body>
-	<div class="nav">
-		<header>
+	<div>
+		<header class="bg-success">
 			
 			<nav>
 	
-				<ul>
-					<li> <a class="boton" href="ayuda.html">Ayuda</li></a>
-					<li> <a class="boton" href="contactanos.html">Contactanos</li></a>
-					<li> <a class="boton" href="Ubicacion.html">Ubicacion</li></a>
-					<li> <a class="boton" href="Información.html">Información</li></a>
+				<ul class="nav justify-content-end fs-6">
+					<li class="nav-item"> <a class="nav-link active" aria-current="page" href="ayuda.html">Ayuda</li></a>
+					<li class="nav-item"> <a class="nav-link active"  href="contactanos.html">Contactanos</li></a>
+					<li class="nav-item"> <a class="nav-link active"  href="Ubicacion.html">Ubicacion</li></a>
+					<li class="nav-item"> <a class="nav-link active"  href="Información.html">Información</li></a>
 				</ul>
 			</nav>
 		
 		</header> <br>
 	</div>
+
 <article>
 	<section>
-		<h1 class="titulo">CENESFU</h1>
+		<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="./img/slide-1.jpeg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="./img/slide-2.jpeg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="./img/slide-3.jpeg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+      </div>
+    </div>
+        <div class="carousel-item">
+      <img src="./img/slide-4.jpeg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+	</section>
+	<section class="Titulo_Home">
+		<h1 >CENESFU</h1>
 		<div class="tyt">
 	 <button id="matriculasabiertas"><a href="Acuerdo de confidencialidad.html">Matriculas abiertas</a> </button><br><br>
 	   </div>
